fix placeholder in textarea and add new placeholder, first try displaying links in email properly

--- a/app/views/topic_mailer/new_ticket.html.erb
+++ b/app/views/topic_mailer/new_ticket.html.erb
@@ -28,7 +28,7 @@
   </p>
   <%= render :partial => 'posts/thumbnail', locals: { :model_name => @topic.posts.last } %>
   <p>
-    <%= t('view_online', default: 'View this online:') %> <%= ticket_url(@topic, host: AppSettings['settings.site_url']) %>
+    <%= t('view_online', default: 'View this online:') %> <a href="<%= ticket_url(@topic, host: AppSettings['settings.site_url']) %>"><%= ticket_url(@topic, host: AppSettings['settings.site_url']) %></a>
   </p>
   <br/>
   <p>
