--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -61,20 +61,9 @@
     </div>
 
     <%= f.simple_fields_for :posts do |p| %>
-      <%= p.input :body, input_html: {:rows => 8, :cols => 60, placeholder: I18n.t(:how_can_we_help), label: 'Message', class: 'disable-empty form-control topic-placeholder'} %>
-      <% unless cloudinary_enabled? %>
-        <%= p.file_field :attachments, multiple: true %>
-        <ul class="list-inline" id="attachments">
-          <%#= render partial: 'posts/attachment', locals: { :model_name => @post } %>
-        </ul>
-      <% end %>
+      <%= p.input :body, input_html: {:rows => 8, :cols => 60, placeholder: I18n.t(:message_placeholder), label: I18n.t(:invite_message), class: 'disable-empty form-control'} %>
     <% end %>
 
-    <div class="add-screenshots">
-      <% if !@widget %>
-      <%= attachinary_file_field_tag 'topic[screenshots]', @topic, :screenshots if cloudinary_enabled? %>
-      <% end %>
-    </div>
 
 
 
