--- a/app/views/post_mailer/new_post.html.erb
+++ b/app/views/post_mailer/new_post.html.erb
@@ -29,7 +29,7 @@
   </p>
   <%= render :partial => 'posts/thumbnail', locals: { :model_name => @post } %>
   <p>
-    <%= t('view_online', default: 'View this online:') %> <%= ticket_url(@topic, host: AppSettings['settings.site_url']) %>
+        <%= t('to_reply', default: 'Reply directly to this email or view this online:') %> <a href="<%= ticket_url(@topic, host: AppSettings['settings.site_url']) %>">Link</a>
   </p>
   <br/>
   <p>
